--- a/ancient/css/pagetools.less
+++ b/ancient/css/pagetools.less
@@ -20,107 +20,114 @@
 //    height: auto;
 //}
 
-#dokuwiki__pagetools {
-    @ico-width: 28px;
-    @ico-margin: 8px;
-    @item-width: (@ico-width + @ico-margin + @ico-margin);
-    @item-height: (@ico-width + @ico-margin);
+@media screen and (min-width: 800px) {
+    #dokuwiki__pagetools {
+        @ico-width: 28px;
+        @ico-margin: 8px;
+        @item-width: (@ico-width + @ico-margin + @ico-margin);
+        @item-height: (@ico-width + @ico-margin);
 
-    position: absolute;
-    right: (-1 * @item-width);
-    /* on same vertical level as first headline, because .page has 2em padding */
-    top: 2em;
-    width: @item-width;
-    background-color: #F9F7ED;
-    border: 0;
-
-    div.tools {
-        position: fixed;
+        position: absolute;
+        right: (-1 * @item-width);
+        /* on same vertical level as first headline, because .page has 2em padding */
+        top: 2em;
         width: @item-width;
+        background-color: #F9F7ED;
+        border: 0;
 
-        ul {
-            position: absolute;
-            right: 0;
-            text-align: right;
-            margin: 0;
-            padding: 0;
-            /* add transparent border to prevent jumping when proper border is added on hover */
-            border: 1px solid transparent;
-            z-index: 10;
+        div.tools {
+            position: fixed;
+            width: @item-width;
 
-            li {
-                padding: 0;
+            ul {
+                position: absolute;
+                right: 0;
+                text-align: right;
                 margin: 0;
-                list-style: none;
-                font-size: 0.875em;
+                padding: 0;
+                /* add transparent border to prevent jumping when proper border is added on hover */
+                border: 1px solid transparent;
+                z-index: 10;
 
-                a {
+                li {
+                    padding: 0;
+                    margin: 0;
+                    list-style: none;
+                    font-size: 0.875em;
 
-                    display: block;
-                    /* add transparent border to prevent jumping when proper border is added on focus */
-                    border: 1px solid transparent;
-                    white-space: nowrap;
-                    line-height: @item-height;
-                    vertical-align: middle;
-                    height: @item-height;
+                    a {
 
-                    span {
-                        display: none; // hide label until hover
-                        margin: 0 @ico-margin;
+                        display: block;
+                        /* add transparent border to prevent jumping when proper border is added on focus */
+                        border: 1px solid transparent;
+                        white-space: nowrap;
+                        line-height: @item-height;
+                        vertical-align: middle;
+                        height: @item-height;
+
+                        span {
+                            display: none; // hide label until hover
+                            margin: 0 @ico-margin;
+                        }
+
+                        svg {
+                            width: @ico-width;
+                            height: @ico-width;
+                            margin: 0 @ico-margin;
+                            display: inline-block;
+                            vertical-align: middle;
+                            fill: @ini_border;
+                        }
                     }
 
-                    svg {
-                        width: @ico-width;
-                        height: @ico-width;
-                        margin: 0 @ico-margin;
-                        display: inline-block;
-                        vertical-align: middle;
-                        fill: @ini_border;
+                    // on interaction show the full item
+                    a:active,
+                    a:focus,
+                    a:hover {
+                        background-color: @ini_background_alt;
+
+                        span {
+                            display: inline-block;
+                        }
+
+                        svg {
+                            fill: @ini_link;
+                        }
                     }
                 }
+            }
+        }
 
-                // on interaction show the full item
-                a:active,
-                a:focus,
-                a:hover {
-                    background-color: @ini_background_alt;
+        [dir=rtl] & {
+            right: auto;
+            left: (-1 * @item-width);
 
-                    span {
-                        display: inline-block;
-                    }
-
-                    svg {
-                        fill: @ini_link;
-                    }
+            div.tools {
+                ul {
+                    right: auto;
+                    left: 0;
+                    text-align: left;
                 }
             }
         }
     }
 
-    [dir=rtl] & {
-        right: auto;
-        left: (-1 * @item-width);
+    // on hover show all items
+    #dokuwiki__pagetools:hover {
+        div.tools ul {
+            background-color: @ini_background;
+            border-color: @ini_border;
+            border-radius: 2px;
+            box-shadow: 2px 2px 2px @ini_text_alt;
 
-        div.tools {
-            ul {
-                right: auto;
-                left: 0;
-                text-align: left;
+            li a span {
+                display: inline-block;
             }
         }
     }
 }
-
-// on hover show all items
-#dokuwiki__pagetools:hover {
-    div.tools ul {
-        background-color: @ini_background;
-        border-color: @ini_border;
-        border-radius: 2px;
-        box-shadow: 2px 2px 2px @ini_text_alt;
-
-        li a span {
-            display: inline-block;
-        }
+@media screen and (max-width: 800px) {
+    #dokuwiki__pagetools {
+        display: none;
     }
 }
