--- a/ancient/css/style.css
+++ b/ancient/css/style.css
@@ -129,6 +129,14 @@ form.search button {
     border-bottom: 0.13em dashed #ccc;
     border-radius: 0.6em;
 }
+#dokuwiki__pagetools div.tools ul li a:active svg,
+#dokuwiki__pagetools div.tools ul li a:focus svg,
+#dokuwiki__pagetools div.tools ul li a:hover svg {
+ fill:#090;
+}
+.dokuwiki a.wikilink1 {
+    color: #090;
+}
 @media screen and (max-width: 800px) {
     #dokuwiki__header ul.a11y.skip {
         display: none;
@@ -316,7 +324,8 @@ form.search button {
 .dokuwiki h3.toggle {
     padding: .2em .5em;
     font-weight: bold;
-    background-color: #e7eaef;
+    background-color: #090;
+    color: #fff;
 }
 
 #dokuwiki__content {
